<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WorkoutPage">

    <Button
        android:id="@+id/button_exitWorkout"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/exit"
        android:textColor="#D32F2F"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_skip"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/skip"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/start"
        android:textColor="#827717"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/button_exitWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_resume"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/resume"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_exitWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_pause"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:fontFamily="casual"
        android:text="@string/pause"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/button_exitWorkout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_timeon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/timeon"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="48sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_exerciseName" />

    <TextView
        android:id="@+id/textView_timerRest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/rest"
        android:textAlignment="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="48sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_exerciseName" />

    <TextView
        android:id="@+id/textView_timeOff"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/timeoff"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="48sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_exerciseName" />

    <TextView
        android:id="@+id/textView_exerciseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:lines="1"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="48sp"
        app:autoSizeMaxTextSize="48dp"
        app:autoSizeMinTextSize="16dp"
        app:autoSizeStepGranularity="1dp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_side"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/side"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_rep"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/rep"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_side"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_set"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/set"
        android:textAlignment="viewStart"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="30sp"
        android:typeface="normal"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rep"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_sideNumber"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="casual"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView_repNumber"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_sideNumber" />

    <TextView
        android:id="@+id/textView_setNumber"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:textAlignment="viewEnd"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_repNumber" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="#00BCD4"
        android:textSize="72sp"
        app:autoSizeMaxTextSize="72sp"
        app:autoSizeMinTextSize="48sp"
        app:autoSizeStepGranularity="1sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_timerRest" />

</android.support.constraint.ConstraintLayout>